Fix bugs in dido-csv